--- a/appoint/src/main/resources/application.properties
+++ b/appoint/src/main/resources/application.properties
@@ -7,3 +7,4 @@ auth.wechat.sessionHost=https://api.weixin.qq.com/sns/jscode2session
 auth.wechat.appId=***
 auth.wechat.secret=***
 auth.wechat.grantType=authorization_code
+logging.level.root=DEBUG
