--- a/appoint/src/main/resources/application.properties
+++ b/appoint/src/main/resources/application.properties
@@ -4,7 +4,7 @@
 
 # wechat Auth
 auth.wechat.sessionHost=https://api.weixin.qq.com/sns/jscode2session
-auth.wechat.appId=***
-auth.wechat.secret=***
+auth.wechat.appId=wx6c68620d6e051338
+auth.wechat.secret=dc4bee41224184f27033d17046da1cd1
 auth.wechat.grantType=authorization_code
-logging.level.root=DEBUG
+#logging.level.root=DEBUG
