支持17：00后预约下一天

--- a/appoint/src/main/resources/application.yml
+++ b/appoint/src/main/resources/application.yml
@@ -38,3 +38,5 @@ logging:
 mybatis:
   typeAliasesPackage: com.loskatt.appoint.mapper
   mapperLocations: classpath*:mybatis-mapper/**Mapper.xml
+appoint:
+  hour: 17
